src/objects/Apply_due_on_members__c.object
<CustomObject>
    <description>Object to store the members on which the due will get applied.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>lookup to member</description>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>Contact.Record_Type_Name__c</field>
                <operation>equals</operation>
                <value>Member</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Auto_Apply_due_on_members</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member_Dues__c</fullName>
        <label>Member Dues</label>
        <referenceTo>Member_Dues__c</referenceTo>
        <relationshipLabel>Apply due on members</relationshipLabel>
        <relationshipName>Auto_Apply_due_on_members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Membership_Type__c</fullName>
        <formula>TEXT(Contact__r.Membership_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Membership Type</label>
        <type>Text</type>
    </fields>
    <label>Apply due on members</label>
    <nameField>
        <displayFormat>APPLY-{0000000}</displayFormat>
        <label>Auto Apply due on members Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apply due on members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>